src/main/java/com/example/demo/error/UnAuthorizedException.java
package com.example.demo.error;

public class UnAuthorizedException extends BusinessException {
  public UnAuthorizedException(String message, ErrorCode errorCode) {
    super(message, errorCode);
  }
}